--- a/my_paint.html
+++ b/my_paint.html
@@ -43,7 +43,7 @@
                         <div class="tool"></div>
                         <div class="tool circle"></div>
                         <div class="tool"></div>
-                        <div class="tool"></div>
+                        <div class="tool colors"><input type="color" class="selectColors"/></div>
                         <div class="tool brush"></div>
                         <div class="tool"></div>
                         <div class="tool text"><p>A</p></div>
@@ -52,6 +52,8 @@
                         <div class="tool"></div>
                         <div class="tool square"></div>
                     </div>
+
+                    
 
                     <select id="tool_size">
                         <option value="2">1</option>
